# LegalAI

./: convert_to_docx.py  report.docx  report.md
LegalAi/: package-lock.json  package.json
LegalAi/src/: App.jsx  Router.jsx  main.jsx
LegalAi/src/Pages/: About.jsx  AskAI.jsx  Contact.jsx  Home.jsx  LegalDocs.jsx  Services.jsx  TestimonialsPage.jsx
LegalAi/src/components/: DarkVeil.jsx  Footer.jsx  Header.jsx  News.jsx  PageTransition.jsx
LegalAi/src/components/common/: Header.jsx
LegalAi/src/components/home/: Buttons.jsx
LegalAi/src/components/layout/: Layout.jsx
legalai_be/: ENHANCED_SYSTEM_DOCUMENTATION.md  INTELLIGENT_SYSTEM_DOCUMENTATION.md  PROJECT_STRUCTURE_CLEAN.md  README.md  SERPER_INTEGRATION_GUIDE.md  main.py  pyproject.toml  report.md  test_api_intelligent.py  test_intelligent_system.py  test_serper.py  test_updated_system.py
legalai_be/db/: chroma.sqlite3
legalai_be/src/legalai_be/: crew.py  main.py
legalai_be/src/legalai_be/config/: agents.yaml  tasks.yaml
legalai_be/src/legalai_be/tools/: __init__.py  custom_tool.py  legal_tools.py  simple_legal_tool.py
